fixed media desktop not showing issue

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -14,7 +14,7 @@
         background-position: 63%;
         height: 70vh;
     }
-    @media (width >= 1280) {
+    @media (width >= 1280px) {
         background-size: cover;
         height: 80vh;
     }
@@ -37,7 +37,7 @@
             padding-top: 7.0rem;
             letter-spacing: 0.3rem;
 
-            @media (width >=1280) {
+            @media (width >=1280px) {
                 font-size: 7.0rem;
                 margin-top: 0;
             }
@@ -59,7 +59,7 @@
             font-size: 2.8rem;
             line-height: 3rem;
         }
-        @media (width >=1280) {
+        @media (width >=1280px) {
             width: 60%;
             margin-top: 0;
             line-height: 1.33;
