--- a/src/scss/layout/_shop-section.scss
+++ b/src/scss/layout/_shop-section.scss
@@ -12,6 +12,10 @@
         @media (width >= 768px) {
             font-size: 1.6rem;
         }
+
+        @media (width >=1280px) {
+            padding: 2.3rem 4.0rem 2.3rem;
+        }
     }
     &-title {
         font-family: $font-main;
